; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/extr_drm_ioctl.c_drm_set_busid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/extr_drm_ioctl.c_drm_set_busid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.drm_device*, %struct.drm_master*)* }
%struct.drm_master = type { i32* }
%struct.drm_file = type { %struct.drm_master* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_device*, %struct.drm_file*)* @drm_set_busid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @drm_set_busid(%struct.drm_device* %0, %struct.drm_file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.drm_device*, align 8
  %5 = alloca %struct.drm_file*, align 8
  %6 = alloca %struct.drm_master*, align 8
  %7 = alloca i32, align 4
  store %struct.drm_device* %0, %struct.drm_device** %4, align 8
  store %struct.drm_file* %1, %struct.drm_file** %5, align 8
  %8 = load %struct.drm_file*, %struct.drm_file** %5, align 8
  %9 = getelementptr inbounds %struct.drm_file, %struct.drm_file* %8, i32 0, i32 0
  %10 = load %struct.drm_master*, %struct.drm_master** %9, align 8
  store %struct.drm_master* %10, %struct.drm_master** %6, align 8
  %11 = load %struct.drm_master*, %struct.drm_master** %6, align 8
  %12 = getelementptr inbounds %struct.drm_master, %struct.drm_master* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %2
  %16 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %17 = load %struct.drm_master*, %struct.drm_master** %6, align 8
  %18 = call i32 @drm_unset_busid(%struct.drm_device* %16, %struct.drm_master* %17)
  br label %19

19:                                               ; preds = %15, %2
  %20 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %21 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %20, i32 0, i32 0
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32 (%struct.drm_device*, %struct.drm_master*)*, i32 (%struct.drm_device*, %struct.drm_master*)** %25, align 8
  %27 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %28 = load %struct.drm_master*, %struct.drm_master** %6, align 8
  %29 = call i32 %26(%struct.drm_device* %27, %struct.drm_master* %28)
  store i32 %29, i32* %7, align 4
  %30 = load i32, i32* %7, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %19
  br label %34

33:                                               ; preds = %19
  store i32 0, i32* %3, align 4
  br label %39

34:                                               ; preds = %32
  %35 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %36 = load %struct.drm_master*, %struct.drm_master** %6, align 8
  %37 = call i32 @drm_unset_busid(%struct.drm_device* %35, %struct.drm_master* %36)
  %38 = load i32, i32* %7, align 4
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %34, %33
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @drm_unset_busid(%struct.drm_device*, %struct.drm_master*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
